--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -42,6 +42,7 @@
             <th>Address</th>
             <th>Created At</th>
             <th>Updated At</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -63,6 +64,11 @@
             <td>{{ client.address }}</td>
             <td>{{ client.createdAt | date:'medium' }}</td>
             <td>{{ client.updatedAt | date:'medium' }}</td>
+            <td>
+              <button mat-icon-button color="primary" (click)="openEditClientDialog(client, $event)" class="edit-button">
+                <mat-icon>edit</mat-icon>
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
